# Code-Base-DX12

./: CMakeLists.txt  README.md
scripts/: imgui.cmake
src/: common.hpp  detour_hook.cpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  main.cpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  settings.hpp
src/class/: abstract.hpp  cktguidialog.hpp  local_player.hpp  vector.hpp
src/hooks/: endscene_hook.cpp  on_reset_hook.cpp  rest_buff.cpp  swapchain_execute_command_list.cpp  swapchain_present.cpp  swapchain_resizebuffers.cpp
src/memory/: pattern_batch.cpp
src/menu/: data_collection.cpp  data_collection.h  dungeon.cpp  dungeon.h  navigation_menu.cpp  player.cpp  setting_menu.cpp
src/services/gui/: gui_service.hpp
src/services/player/: player.cpp  player.hpp  player_service.cpp  player_service.hpp
src/utility/: els_util.hpp
